# cookiecutter-pypackage

./: cookiecutter.json
.github/workflows/: dev.yml
{{cookiecutter.project_slug}}/: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py
