{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "{{ cookiecutter.pkg_name }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "8.0.1"
{%- elif cookiecutter.command_line_interface|lower == 'typer' %}
typer = "^0.7.0"
{%- endif %}

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
tox = "^4.11.3"
virtualenv = "^20.24.5"
pip = "^23.2.1"
twine = "^4.0.2"
pre-commit = "^3.4.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
jupyter = "^1.0.0"
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.1"
mkdocs-material = "^9.4.2"
mkdocs-autorefs = "^0.5.0"
mkdocstrings-python = "^1.7.0"
mkdocs-material-extensions = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
